# gda_compute

./: Cargo.toml  LICENSE  README.md  build.rs
benches/: my_benchmark.rs
src/: lib.rs
src/compute/: mod.rs
src/compute/gpu/: mod.rs  processor.rs
src/compute/gpu/shaders/: test.comp.spv  testar.comp  testar.comp.spv
src/compute/gpu_deprecated/: mod.rs  processor.rs
src/compute/instruction/: dual.rs  mod.rs  single.rs
src/compute/operation/: mod.rs
src/compute/processor/: mod.rs
src/compute/processor/gpu/: mod.rs  shader.rs
src/compute/tensor/: mod.rs  operation.rs  supported_datatypes.rs  tensor.rs  tensor_binding.rs  tensor_holder.rs  tensor_operation_result.rs
src/data/: datapoint.rs  mod.rs
