[package]
name = "gda_core"
version = "0.1.0"
authors = ["nnuss <nathanael.nussbaumer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gda_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
wgpu = { version="0.6.2" }
pollster = "0.2.1"
wgpu-subscriber = "0.1.0"
bytemuck = "1"
shaderc = "0.7"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"