[package]
name = "gda_compute"
version = "0.0.1"
authors = ["Nathanael Nussbaumer <nathanael.code@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gda_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
wgpu = { version="0.6.2" }
pollster = "0.2.1"
wgpu-subscriber = "0.1.0"
bytemuck = "1"
shaderc = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false